# leetcode-solutions

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  Makefile  README.md  go.mod  go.work
.claude/commands/: bazel-fix.md  new-go-problem.md
.github/workflows/: tests.yml
common/go/: BUILD.bazel  go.mod
easy/0083-remove-duplicates-from-sorted-list/: README.md
easy/0083-remove-duplicates-from-sorted-list/go/: BUILD.bazel  go.mod  solution.go
easy/009-palindrome-number/: BUILD.bazel  package palindrome_number.go
easy/009-palindrome-number/go/: BUILD.bazel  go.mod  package palindrome_number_test.go
easy/013-roman-to-integer/: README.md  main_test.go
easy/013-roman-to-integer/go/: BUILD.bazel  go.mod  main.go
easy/013-roman-to-integer/rust/: BUILD.bazel  Cargo.toml
easy/013-roman-to-integer/rust/src/: main.rs  solution.rs
easy/026-remove-duplicates-from-sorted-array/: README.md  main.go
easy/026-remove-duplicates-from-sorted-array/go/: BUILD.bazel  go.mod  main_test.go  remove_duplicates_test.go
easy/026-remove-duplicates-from-sorted-array/rust/: Cargo.toml
easy/0876-middle-of-linked-list/: README.md
easy/1071-greatest-common-divisor-of-strings/: solution.py
easy/141-linked-list-cycle/: README.md
easy/141-linked-list-cycle/go/: BUILD.bazel  go.mod  solution.go  solution_test.go
easy/1431-kids-with-the-greatest-number-of-candies/: solution.py
easy/1732-find-the-highest-altitude/: README.md
easy/1732-find-the-highest-altitude/rust/: BUILD.bazel  Cargo.toml
easy/1732-find-the-highest-altitude/rust/src/: main.rs  solution.rs
easy/1732-find-the-highest-altitude/rust/tests/: solution_test.rs
easy/1768-merge-strings-alternately/: Solution.py
easy/242-Valid-Anagram/: BUILD.bazel  go.mod  main_test.go  valid_anagram.go  valid_anagram_test.go
easy/242-Valid-Anagram/go/: BUILD.bazel
easy/303-range-sum-query-immutable/: README.md  solution.py
easy/345-reverse-vowels-of-a-string/: solution.py  tests.py
easy/346-moving-average-from-data-stream/go/: BUILD.bazel  go.mod  solution.go  solution_test.go
easy/374-guess-number-higher-or-lower/: solution.py  tests.py
easy/496-next-greater-element-i/: solution.py  tests.py
easy/506-relative-ranks/: BUILD.bazel  README.md  main.go
easy/703-kth-largest-element-in-a-stream/: BUILD.bazel  README.md  go.mod  main.go  solution.go  solution_test.go
easy/742-find-pivot-index/: solution.py
easy/917-reverse-only-letters/: README.md  solution.py
easy/reverse-words-in-a-string-iii/: solution.py
hard/0004-median-of-two-sorted-arrays/: README.md
hard/0004-median-of-two-sorted-arrays/go/: BUILD.bazel  go.mod  solution.go  solution_test.go
hard/0004-median-of-two-sorted-arrays/rust/: BUILD.bazel  Cargo.toml
hard/0004-median-of-two-sorted-arrays/rust/src/: lib.rs
hard/0239-sliding-window-maximum/: README.md
hard/0239-sliding-window-maximum/go/: BUILD.bazel  go.mod  solution.go  solution_test.go
hard/0239-sliding-window-maximum/rust/: BUILD.bazel
hard/0239-sliding-window-maximum/rust/src/: lib.rs
hard/0843-guess-the-word/: README.md
hard/0843-guess-the-word/go/: BUILD.bazel  go.mod  master.go  solution.go  solution_test.go
hard/merge-k-sorted-lists/: solution.py
medium/0002-add-two-numbers/: README.md
medium/0002-add-two-numbers/go/: BUILD.bazel  main.go  main_test.go  solution.go  solution_test.go
medium/0003-longest-substring-without-repeating-characters/: README.md
medium/0005-longest-palindromic-substring/go/: BUILD.bazel  go.mod  solution.go  solution_test.go
medium/0011-container-with-most-water/: README.md
medium/0011-container-with-most-water/go/: BUILD.bazel  go.mod  solution.go  solution_test.go
medium/0011-container-with-most-water/rust/: BUILD.bazel
medium/0011-container-with-most-water/rust/src/: lib.rs
medium/0019-remove-nth-node-from-end-of-list/: README.md
medium/0071-simplify-path/: README.md
medium/0115-min-stack/: README.md
medium/0151-reverse-word-in-a-string/: tests.py
medium/0208-implement-trie/: solution.py  tests.py
medium/0215-kth-largest-element-in-an-array/: README.md
medium/0215-kth-largest-element-in-an-array/rust/: BUILD.bazel  Cargo.toml
medium/0215-kth-largest-element-in-an-array/rust/src/: lib.rs
medium/0347-top-k-frequent-elements/: README.md
medium/0355-design-twitter/: README.md
medium/0355-design-twitter/go/: BUILD.bazel  go.mod  solution.go  solution_test.go
medium/0438-find-all-anagrams-in-a-string/: go.mod
medium/0438-find-all-anagrams-in-a-string/go/: BUILD.bazel  main.go
medium/0443-string-compression/: tests.py
medium/0735-asteroid-colissions/: README.md
medium/0735-asteroid-colissions/go/: BUILD.bazel  go.mod  solution.go  stack.go
medium/0739-daily-temperatures/: solution.py  tests.py
medium/1026-maximum-difference-between-node-and-ancestor/: solution.py
medium/1115-print-foobar-alternately/: .gitignore  BUILD.bazel  MODULE.bazel
medium/1115-print-foobar-alternately/go/: AGENTS.md  BUILD.bazel  go.mod  main.go  main_test.go
medium/1115-print-foobar-alternately/python/: BUILD.bazel  foobar.py  foobar_test.py  main.py  pyproject.toml  requirements_lock.txt
medium/1456-maximum-number-of-vowels-in-a-substring-of-given-length/: solution.py  tests.py
medium/151-reverse-word-in-a-string/: solution.py
medium/1657-determine-if-two-strings-are-close/: solution.py  tests.py
medium/2-add-two-numbers/: BUILD.bazel
medium/2225-find-players-with-zero-or-one-losses/: solution.py  tests.py
medium/2390-removing-stars-from-a-string/: README.md
medium/438-find-all-anagrams-in-a-string/: BUILD.bazel  main_test.go
medium/443-string-compression/: solution.py
medium/count-number-of-nice-subarrays/: solution.py  tests.py
medium/get-equal-substrings-within-budget/: solution.py  tests.py
medium/letter-combinations-of-a-phone-number/: solution.py
medium/minimum-size-subarra-sum/: solution.py
medium/number-of-islands/: solution.py
medium/subarray-sum-equals-k/: solution.py  tests.py
medium/two-best-non-overlapping-events/: solution.py
(+48 files in other folders)
