module(
    name = "leetcode",
    version = "1.0",
)

bazel_dep(name = "rules_python", version = "2.0.2")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.50.0")
bazel_dep(name = "rules_rust", version = "0.70.0")

# Rust tooling
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2024")
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Go tooling
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")
use_repo(
    go_deps,
    "com_github_magiconair_properties",
    "com_github_stretchr_testify",
)
