load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "palindrome_number_lib",
    srcs = ["package palindrome_number.go"],
    importpath = "palindrome-number",
    visibility = ["//visibility:private"],
)

go_test(
    name = "palindrome_number_test",
    srcs = ["package palindrome_number_test.go"],
    embed = [":palindrome_number_lib"],
)

go_library(
    name = "009-palindrome-number",
    srcs = ["package palindrome_number.go"],
    importpath = "github.com/dperezmavro/leetcode/easy/009-palindrome-number",
    visibility = ["//visibility:public"],
)

go_test(
    name = "009-palindrome-number_test",
    srcs = ["package palindrome_number_test.go"],
    embed = [":009-palindrome-number"],
)
