load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "703-kth-largest-element-in-a-stream",
    srcs = ["solution.go"],
    importpath = "github.com/dperezmavro/leetcode/easy/703-kth-largest-element-in-a-stream",
    visibility = ["//visibility:public"],
)

go_test(
    name = "703-kth-largest-element-in-a-stream_test",
    srcs = ["solution_test.go"],
    embed = [":703-kth-largest-element-in-a-stream"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
