load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "romantoint_lib",
    srcs = ["main.go"],
    importpath = "github.com/dio/coding-challenge/problems/easy/13-roman-to-integer",
    visibility = ["//visibility:private"],
)

go_test(
    name = "romantoint_test",
    srcs = ["main_test.go"],
    embed = [":romantoint_lib"],
)

go_library(
    name = "go",
    srcs = ["main.go"],
    importpath = "github.com/dperezmavro/leetcode/easy/013-roman-to-integer/go",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_test",
    srcs = ["main_test.go"],
    embed = [":go"],
)
