load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "remove_duplicates_lib",
    srcs = ["remove_duplicates.go"],
    importpath = "github.com/dio/coding-challenge/problems/easy/26-remove-duplicates-from-sorted-array",
    visibility = ["//visibility:private"],
)

go_test(
    name = "remove_duplicates_test",
    srcs = ["remove_duplicates_test.go"],
    embed = [":remove_duplicates_lib"],
)
