load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go",
    srcs = ["valid_anagram.go"],
    importpath = "github.com/dperezmavro/leetcode-solutions/easy/242-valid-anagram/go",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_test",
    size = "small",
    srcs = ["valid_anagram_test.go"],
    embed = [":go"],
)
