load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go",
    srcs = ["solution.go"],
    importpath = "github.com/dperezmavro/leetcode/easy/346-moving_average_from_data_stream/go",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_test",
    srcs = ["solution_test.go"],
    embed = [":go"],
    deps = ["@com_github_magiconair_properties//assert"],
)
