load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go",
    srcs = ["solution.go"],
    importpath = "github.com/dperezmavro/leetcode/hard/0004-median-of-two-sorted-arrays/go",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_test",
    size = "small",
    srcs = ["solution_test.go"],
    embed = [":go"],
)
