load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_binary(
    name = "solution",
    embed = [":go_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_lib",
    srcs = ["main.go"],
    importpath = "github.com/dperezmavro/leetcode/medium/0002-add-two-numbers/go",
    visibility = ["//visibility:private"],
)

go_test(
    name = "go_test",
    srcs = ["main_test.go"],
    embed = [":go_lib"],
)
