load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "kth-largest-element-in-an-array",
    srcs = ["src/lib.rs"],
    edition = "2024",
    visibility = ["//visibility:public"],
)

rust_test(
    name = "kth-largest-element-in-an-array_test",
    crate = ":kth-largest-element-in-an-array",
    edition = "2024",
)
