load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "438-find-all-anagrams-in-a-string",
    srcs = ["main.go"],
    importpath = "github.com/dperezmavro/leetcode/medium/438-find-all-anagrams-in-a-string",
    visibility = ["//visibility:public"],
)

go_test(
    name = "438-find-all-anagrams-in-a-string_test",
    srcs = ["main_test.go"],
    embed = [":438-find-all-anagrams-in-a-string"],
)

go_library(
    name = "go",
    srcs = ["main.go"],
    importpath = "github.com/dperezmavro/leetcode/medium/0438-find-all-anagrams-in-a-string/go",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_test",
    srcs = ["main_test.go"],
    embed = [":go"],
)
