load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go",
    srcs = ["main.go"],
    importpath = "github.com/dperezmavro/leetcode-solutions/medium/0438-find-all-anagrams-in-a-string/go",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_test",
    size = "small",
    srcs = ["main_test.go"],
    embed = [":go"],
)
