load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go",
    srcs = [
        "solution.go",
        "stack.go",
    ],
    importpath = "github.com/dperezmavro/leetcode/medium/0735-asteroid-colissions/go",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_test",
    srcs = ["solution_test.go"],
    embed = [":go"],
    deps = ["@com_github_stretchr_testify//assert"],
)
