load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_binary(
    name = "go",
    embed = [":go_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_lib",
    srcs = ["main.go"],
    importpath = "print-foobar",
    visibility = ["//visibility:private"],
)

go_test(
    name = "go_test",
    srcs = ["main_test.go"],
    embed = [":go_lib"],
)
